Fix setting maven.compiler.release on JDK9+