@@ -55,9 +55,14 @@
   </developers>
 
   <properties>
-    <!-- <maven.compiler.release>8</maven.compiler.release> -->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
+    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+    <maven.compiler.optimize>false</maven.compiler.optimize>
+
+    <surefire.argLine>-Duser.language=en -Duser.region=US</surefire.argLine>
+    <argLine>${surefire.argLine}</argLine>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -133,7 +138,22 @@
 
   <profiles>
     <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <properties>
+        <maven.compiler.release>8</maven.compiler.release>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <argLine>${surefire.argLine} --illegal-access=deny --add-opens java.base/java.net=ALL-UNNAMED</argLine>
+      </properties>
+    </profile>
+    <profile>
       <id>release</id>
+      <properties>
+        <maven.compiler.optimize>true</maven.compiler.optimize>
+      </properties>
       <build>
         <plugins>
           <plugin>
